<resources>
    <string name="app_name">Aangadia Account Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">User Name</string>
    <string name="email">E-mail Id</string>
    <string name="password">Password</string>
    <string name="answer">Answer</string>
    <string name="answerQuestion">Answer Security Question</string>
    <string name="owner">owner: admin@a.com</string>
    <string name="owner1">OWNER</string>
    <string name="aangadia">AANGADIA</string>
    <string name="addAangadia">ADD \nAANGADIA</string>
    <string name="addUser">ADD USER</string>
    <string name="manageAangadia">MANAGE \nAANGADIA</string>
    <string name="addAangadiaU"><b>ADD AANGADIA</b></string>
    <string name="allAangadia">ALL \nAANGADIAS</string>
    <string name="user">USER</string>
    <string name="masterKey">Enter a Master Key</string>
    <string name="ok">Okay</string>
    <string name="uniqueIdOfAangadia">Unique Identity Of Aangadia</string>
    <string name="lengthOfPassword">Keep Password Length at least 8</string>
    <string name="UserNameVisible">This Name will be Visible To Users</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="phoneNumberOptional">10 Digit Number (Optional)</string>
    <string name="logout">Logout</string>
    <string name="state">State</string>
    <string name="enterState">Enter name of State</string>
    <string name="city">City</string>
    <string name="enterCity">Enter name of City</string>
    <string name="aangadiaList">List of Aangadias</string>
    <string name="usersList">List of Users</string>
    <string name="hintPlaceholderDouble">_______ _______</string>
    <string name="hintPlaceholderSingle">_______</string>
    <string name="hintPlaceholderSingleSmall">____</string>
    <string name="nameSemi">Name:</string>
    <string name="phoneSemi">Phone:</string>
    <string name="passwordSemi">Password:</string>
    <string name="uidSemi">Unique ID(uid):</string>
    <string name="SecurityQuestionSemi">S.Q:</string>
    <string name="AnswerSemi">Answer:</string>
    <string name="totalAangadias">Total Aangadias:</string>
    <string name="totalUsers">Total Users:</string>
    <string name="stateSemi">State:</string>
    <string name="citySemi">City:</string>
    <string name="uid">UID</string>
    <string name="amount">Enter Amount</string>
    <string name="aangadia_account_manager">Aangadia  Account  Manager</string>
    <string name="todo">TODO</string>
    <string name="admin_account">Admin Account</string>
    <string name="balance">Balance: </string>
    <string name="add_aangadia">Add Aangadia</string>
    <string name="aangadia_details_will_be_visible_in_all_aangadias_module">Aangadia details will be visible in All Aangadias Module.</string>
    <string name="all_aangadia">All Aangadia</string>
    <string name="transactions">Transactions:</string>
    <string name="add_user">Add User</string>
    <string name="user_details_will_be_visible_in_all_users_module">User details will be visible in All Users Module.</string>
    <string name="all_users">All Users</string>
    <string name="add_commission">Add Commission</string>
    <string name="current_commission">Current Commission:</string>
    <string name="cash_in_hand_transactions">Cash In Hand Transactions</string>
    <string name="NTPTIMESERVER">sg.pool.ntp.org</string>
</resources>

