<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fading_wheat_red"
    android:id="@+id/fad_mainRelativeLayout"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.donotauthenticatemyapp.teamaccountmanager.AddAangadia">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:isScrollContainer="true"
        >
    <RelativeLayout
        android:id="@+id/la_relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rectangle_white"
        android:layout_marginStart="@dimen/activity_start_margin"
        android:layout_marginEnd="@dimen/activity_end_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <!--header-->
        <util.android.textviews.FontTextView
            android:id="@+id/fad_headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addAangadiaU"
            android:layout_alignParentEnd="true"
            style="@style/MyCustomTextStyleSmall"
            android:fontFamily="ubuntu"
            android:textColor="@color/black90"
            android:padding="@dimen/generalPaddingFive"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/ic_worker"
            android:id="@+id/fad_workerImage"
            />


        <!--registered email
        <util.android.textviews.FontTextView
            android:id="@+id/fad_emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            android:layout_below="@+id/fad_workerImage"
            />

        <EditText
            android:id="@+id/fad_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fad_emailTextView"
            android:layout_marginTop="@dimen/paddingBetweenET"
            style="@style/MyCustomEditTextStyle"
            android:hint="@string/uniqueIdOfAangadia"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" /> -->






        <!--username-->
        <util.android.textviews.FontTextView
            android:id="@+id/fad_userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            android:layout_below="@+id/fad_workerImage"
            />

        <EditText
            android:id="@+id/fad_userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fad_userNameTextView"
            android:layout_marginTop="@dimen/paddingBetweenET"
            style="@style/MyCustomEditTextStyle"
            android:hint="@string/UserNameVisible"
            android:drawableEnd="@drawable/ic_user_name"
            android:inputType="textCapWords"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--phone-->
        <util.android.textviews.FontTextView
            android:id="@+id/fad_phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            android:layout_below="@+id/fad_userNameEditText"
            />

        <EditText
            android:id="@+id/fad_phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fad_phoneTextView"
            android:layout_marginTop="@dimen/paddingBetweenET"
            style="@style/MyCustomEditTextStyle"
            android:hint="@string/phoneNumberOptional"
            android:drawableEnd="@drawable/ic_phone"
            android:maxLength="10"
            android:inputType="phone"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop"
            tools:ignore="LabelFor" />


        <!--password-->
        <util.android.textviews.FontTextView
            android:id="@+id/fad_passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            android:layout_below="@+id/fad_phoneEditText"
            />

        <EditText
            android:id="@+id/fad_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fad_passwordTextView"
            android:layout_marginTop="@dimen/paddingBetweenET"
            style="@style/MyCustomEditTextStyle"
            android:hint="@string/lengthOfPassword"
            android:drawableEnd="@drawable/ic_password"
            android:inputType="textPassword"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop"
            android:maxLength="15"
            tools:ignore="LabelFor" />

        <!--spinner-->
        <Spinner
            android:id="@+id/fad_securityQuestionsSpinner"
            android:layout_below="@+id/fad_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/black50"
            style="@style/MyCustomTextStyleSmall"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:layout_marginEnd="@dimen/activity_end_margin"
            android:spinnerMode="dropdown"/>

        <!--security answer-->
        <util.android.textviews.FontTextView
            android:id="@+id/fad_securityAnswerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            style="@style/MyCustomTextStyleMedium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:fontFamily="ubuntu"
            android:layout_below="@+id/fad_securityQuestionsSpinner"
            />

        <EditText
            android:id="@+id/fad_securityAnswerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fad_securityAnswerTextView"
            android:layout_marginTop="@dimen/paddingBetweenET"
            style="@style/MyCustomEditTextStyle"
            android:hint="@string/answerQuestion"
            android:drawableEnd="@drawable/ic_question"
            android:inputType="text"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop"
            android:maxLength="15"
            tools:ignore="LabelFor" />


        <!--login button-->

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/fad_submitButton"
            android:layout_below="@+id/fad_securityAnswerEditText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_start_margin"
            android:layout_marginEnd="@dimen/activity_end_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/lightCoral"
            fancy:fb_focusColor="@color/whiteSmoke"
            fancy:fb_fontIconResource="&#xf084;"
            fancy:fb_iconPosition="right"
            fancy:fb_radius="2dp"
            fancy:fb_text="Create Account"
            fancy:fb_textColor="@color/black"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:elevation="@dimen/elevation_5"
            tools:targetApi="lollipop" />



    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
