<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fading_wheat_red"
    tools:context=".UserDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:id="@+id/ud_backButton"
            />

        <TextView
            android:id="@+id/ud_userNameTexView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            style="@style/MyCustomTextStyleMedium"
            />


        <RelativeLayout
            android:id="@+id/ud_relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ud_userNameTexView"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background_shadow_1"
            android:padding="8dp"
            >

            <!-- uid -->
            <TextView
                android:id="@+id/ud_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uidSemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_uidTextView"
                android:layout_toEndOf="@+id/ud_uid"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_uid"
                />


            <!-- password -->
            <TextView
                android:id="@+id/ud_password"
                android:layout_below="@+id/ud_uidTextView"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordSemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_passwordTextView"
                android:layout_toEndOf="@+id/ud_password"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_password"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/ud_relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ud_relativeLayout1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background_shadow"
            android:padding="8dp"
            >

            <!-- question -->
            <TextView
                android:id="@+id/ud_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SecurityQuestionSemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_questionTextView"
                android:layout_toEndOf="@+id/ud_question"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_question"
                />

            <!-- answer -->
            <TextView
                android:id="@+id/ud_answer"
                android:layout_below="@+id/ud_questionTextView"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AnswerSemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_answerTextView"
                android:layout_toEndOf="@+id/ud_answer"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_answer"
                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ud_relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ud_relativeLayout2"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/background_shadow_2"
            android:padding="8dp"
            >

            <!-- state -->
            <TextView
                android:id="@+id/ud_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stateSemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_stateTextView"
                android:layout_toEndOf="@+id/ud_state"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_state"
                />

            <!-- city -->
            <TextView
                android:id="@+id/ud_city"
                android:layout_below="@+id/ud_stateTextView"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/citySemi"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:textColor="@color/black90"
                />

            <TextView
                android:id="@+id/ud_cityTextView"
                android:layout_toEndOf="@+id/ud_city"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintPlaceholderSingle"
                style="@style/MyCustomTextStyleSmall"
                android:textStyle="bold"
                android:layout_alignTop="@+id/ud_city"
                />


        </RelativeLayout>





    </RelativeLayout>

</FrameLayout>
