<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:id="@+id/adh_fragment_container"
    tools:context="com.donotauthenticatemyapp.teamaccountmanager.AdminHomePage">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/appColor"
        >
        <!--admin-->
        <util.android.textviews.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            style="@style/MyCustomTextStyleSmall"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="@color/black50"
            />
        <!--logout-->
        <ImageButton
            android:id="@+id/adh_logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logout"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            tools:ignore="ContentDescription,RelativeOverlap" />

    <!--vertical divider-->
    <android.support.v4.widget.Space
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_centerInParent="true"
        android:id="@+id/adh_dividerVertical"
        />

        <!--linear layout 1-->
        <LinearLayout
            android:id="@+id/dash_linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/adh_dividerVertical"
            android:orientation="vertical"
            android:weightSum="2"
            >

            <!--add aangadia-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:drawableTop="@drawable/ic_add_aangadia"
                android:drawablePadding="@dimen/paddingInDashBoardIcons"
                android:background="@color/appColor"
                android:text="@string/addAangadia"
                style="@style/MyCustomTextStyleMedium"
                android:id="@+id/adh_addAangadiaImage"
                tools:ignore="ContentDescription"
                android:padding="@dimen/generalPaddingFive"
                android:layout_weight="1"
                />

            <!--add aangadia-->
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:drawableTop="@drawable/ic_manage"
                android:padding="@dimen/generalPaddingFive"
                android:drawablePadding="@dimen/paddingInDashBoardIcons"
                android:background="@color/appColor"
                android:text="@string/manageAangadia"
                style="@style/MyCustomTextStyleMedium"
                android:id="@+id/adh_manageAangadiaImage"
                android:layout_weight="1"
                />


        </LinearLayout>


        <!--linear layout 2-->
        <LinearLayout
            android:id="@+id/dash_linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/adh_dividerVertical"
            android:orientation="vertical"
            android:weightSum="1"
            android:background="@color/appColor"
            >

            <!--Manage aangadia-->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:drawableTop="@drawable/ic_list"
                    android:padding="@dimen/generalPaddingFive"
                    android:drawablePadding="@dimen/paddingInDashBoardIcons"
                    android:background="@color/appColor"
                    android:text="@string/allAangadia"
                    style="@style/MyCustomTextStyleMedium"
                    android:id="@+id/adh_allAngadiaImage"
                    android:layout_weight="1"
                    />


        </LinearLayout>








    </RelativeLayout>


</FrameLayout>
